# wiffer

./: .env.model  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: CODEOWNERS
src/: app.py  helpers.py  oidc.py
tests/: test_helpers.py  test_oidc.py
