[project]
name = "oidc-fun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "jwcrypto>=1.5.6",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pre-commit-update>=0.6.1",
    "pytest>=8.3.5",
]
