[project]
name = "wiffer"
version = "1.0.0"
description = "Simple example OIDC WIF Workload Identity Federation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "jwcrypto>=1.5.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pre-commit-update>=0.6.1",
    "pytest>=8.3.5",
]
